--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
@@ -13,7 +13,11 @@
               <p class="sub-heading" style="font-size: 15px">
                 For each room, list items submitted for damage assessment. For example:
               </p>
-
+              <img
+                src="/assets/images/example-damage.png"
+                class="example-damage-image"
+                alt="Example description"
+              />
               <table mat-table [dataSource]="damagedRoomsDataSource" *ngIf="damagedRoomsDataSource.getValue().length > 0" style="width:100%">
                 <!-- Room Type Column -->
                 <ng-container matColumnDef="roomType" style="width:20%">
@@ -38,11 +42,11 @@
                 <!-- Delete & Edit Icons Column -->
                 <ng-container matColumnDef="icons" style="width:20%">
                   <th mat-header-cell *matHeaderCellDef>
-                    &nbsp;Icons
+                    &nbsp;
                   </th>
-                  <td *matCellDef="let element" mat-cell>
+                  <td *matCellDef="let element; let index = index" mat-cell>
                     <button
-                      class="delete-image"
+                      class="edit-image"
                       mat-icon-button
                       aria-label="Edit"
                       (click)="editDamagedRoomRow(element, index)"
@@ -110,6 +114,7 @@
                       >
                         Room type is required</mat-error
                       >
+                      <mat-hint *ngIf="showGarageHint"> Attached garages only; detached garages can`t be included</mat-hint>
                     </mat-form-field>
                     <mat-form-field appearance="outline" *ngIf="showOtherRoomType === true">
                       <mat-label>Please specify Other room</mat-label>
@@ -149,7 +154,7 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-md-3">
+                  <div class="col-md-6">
                     <button
                       class="button-s details-button"
                       mat-button
@@ -159,7 +164,7 @@
                       Cancel
                     </button>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-6">
                     <button
                       class="family-button details-button save-button"
                       mat-button
@@ -174,6 +179,170 @@
               </mat-card>
             </div>
 
+          </div>
+        </ng-container>
+      </div>
+      <br/><br/>
+
+      <div formGroupName="fileAttachment">
+        <ng-container>
+          <div clas="row">
+            <div class="col-md-12">
+              <p class="sub-heading" style="font-size: 15px">
+                If you have photos of damaged items, please have them available during the site meeting to help the evaluator identify eligible costs. You may also attach them to this application.
+              </p>
+              <table mat-table [dataSource]="fileAttachmentsDataSource" *ngIf="fileAttachmentsDataSource.getValue().length > 0" style="width:100%">
+                <!-- File Name Column -->
+                <ng-container matColumnDef="fileName" style="width:25%">
+                  <th mat-header-cell *matHeaderCellDef >
+                    <b>File Name</b>
+                  </th>
+                  <td *matCellDef="let element" mat-cell>
+                    {{ element.fileName }}
+                  </td>
+                </ng-container>
+
+                <!-- Description Column -->
+                <ng-container matColumnDef="fileDescription" style="width:25%">
+                  <th mat-header-cell *matHeaderCellDef>
+                    <b>File Description</b>
+                  </th>
+                  <td *matCellDef="let element" mat-cell>
+                    {{ element.fileDescription}}
+                  </td>
+                </ng-container>
+
+                <!-- UploadedDate Column -->
+                <ng-container matColumnDef="uploadedDate" style="width:25%">
+                  <th mat-header-cell *matHeaderCellDef>
+                    <b>Date Uploaded</b>
+                  </th>
+                  <td *matCellDef="let element" mat-cell>
+                    {{ element.uploadedDate | date:"dd-MMM-yyyy" }}
+                  </td>
+                </ng-container>
+
+                <!-- Delete & Edit Icons Column -->
+                <ng-container matColumnDef="icons" style="width:25%">
+                  <th mat-header-cell *matHeaderCellDef>
+                    &nbsp;
+                  </th>
+                  <td *matCellDef="let element; let index = index" mat-cell>
+                    <button
+                      class="delete-image"
+                      mat-icon-button
+                      aria-label="Edit"
+                      (click)="editFileAttachmentRow(element, index)"
+                    >
+                      <img src="/assets/images/edit.svg" height="35" width="35" />
+                      <img
+                        src="/assets/images/edit_onhover.svg"
+                        height="35"
+                        width="35"
+                      />
+                    </button>&nbsp;
+                    <button
+                      class="delete-image"
+                      mat-icon-button
+                      aria-label="Remove"
+                      (click)="deleteFileAttachmentRow(index)"
+                    >
+                      <img src="/assets/images/delete.svg" height="35" width="35" />
+                      <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
+                    </button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="fileAttachmentColumnsToDisplay"></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let element; columns: fileAttachmentColumnsToDisplay"
+                  class="example-element-row"
+                  [style.height]="'auto'"
+                ></tr>
+
+              </table>
+
+              <div  *ngIf="fileAttachmentsDataSource.getValue().length > 0">
+                <br /><br/>
+              </div>
+
+              <button
+                *ngIf="!showFileAttachmentForm"
+                class="family-button"
+                mat-button
+                type="button"
+                (click)="addFileAttachment()"
+              >
+                + Add Photos
+              </button>
+
+              <mat-card *ngIf="showFileAttachmentForm">
+                <div class="row">
+                  <div class="col-md-6">
+                    <label class="sub-heading" style="font-size: 15px"
+                    >Attach a photo/scanned copy of damaged items</label
+                  >
+                    <app-file-upload
+                      [noOfAttachments]="1"
+                      (attachedFile)="setFileFormControl($event)"
+                    >
+                    </app-file-upload>
+                  </div>
+                  <div class="col-md-6">
+                    <br/><br/>
+                    <div [hidden]="!damagedItemsByRoomForm.get('fileAttachment.fileData').value">
+                      <mat-label>File name<span style="color:red" >*</span></mat-label>
+                      <br/>
+                      {{ damagedItemsByRoomForm.get('fileAttachment.fileName').value }}
+                      <br/><br/>
+                    </div>
+                    <label class="sub-heading" style="font-size: 15px" [hidden]="!damagedItemsByRoomForm.get('fileAttachment.fileData').value"
+                      >You may update the file description to something more descriptive:</label
+                    >
+                    <mat-form-field appearance="outline" [hidden]="!damagedItemsByRoomForm.get('fileAttachment.fileData').value">
+                      <mat-label>File description</mat-label>
+                      <input formControlName="fileDescription" matInput placeholder="File description" required/>
+                      <mat-error
+                        *ngIf="
+                          damagedItemsByRoomForm.get('fileAttachment').controls.fileDescription.invalid &&
+                          damagedItemsByRoomForm.get('fileAttachment').controls.fileDescription.hasError('required') &&
+                          damagedItemsByRoomForm.get('fileAttachment').controls.fileDescription.touched
+                        "
+                      >
+                        File description is required</mat-error
+                      >
+                    </mat-form-field>
+                  </div>
+                </div>
+
+                <br/><br/>
+                <div class="row">
+                  <div class="col-md-6">
+                    <button
+                      class="button-s details-button"
+                      mat-button
+                      type="button"
+                      (click)="cancelFileAttachments()"
+                    >
+                      Cancel
+                    </button>
+                  </div>
+                  <div class="col-md-6">
+                    <button
+                      class="family-button details-button save-button"
+                      mat-button
+                      type="button"
+                      (click)="saveFileAttachments()"
+                    >
+                      Save
+                    </button>
+                  </div>
+                </div>
+
+              </mat-card>
+
+            </div>
           </div>
 
         </ng-container>
