--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.scss
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.scss
@@ -96,6 +96,14 @@ display: block;
 display: none;
 }
 
+.example-damage-image {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: block;
+  margin-top: 10px;
+  margin-bottom: 36px;
+}
+
 .edit-image img:last-child {
   display: none;
 }
