sign and submit

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/dfa-application-main/dfa-application-main.component.html
@@ -8,6 +8,7 @@
         class="button-p save-button col-4"
         style="height:40px !important; vertical-align: middle; width:220px;"
         [disabled]="isSubmitted"
+        (click)="submitFile()"
         mat-stroked-button
         type="button"
         >
@@ -58,7 +59,7 @@
             type="button"
             (click)="goForward(dfaApplicationMainStepper, step.isLast, step.component)"
           >
-            Review Submission
+            Next - Review Submission
           </button>
           <button
             *ngIf="!(currentFlow === 'verified-registration' && (step.component === 'review' || step.component === 'damaged-items-by-room'))"
@@ -77,7 +78,7 @@
         Please read through and confirm that your details are all correct before
         submitting.
       </p>
-      <ng-template matStepLabel>Review & Submit</ng-template>
+      <ng-template matStepLabel>Review</ng-template>
       <app-review
         [type]="type"
         [showHeading]="true"
@@ -87,20 +88,64 @@
       </app-review>
       <br />
 
-      <button
-        class="button-p save-button"
-        [disabled]="isSubmitted"
-        mat-stroked-button
-        type="button"
-        (click)="goForward(dfaApplicationMainStepper, true, 'review')"
-      >
-        Save & Submit
-        <app-loader
-          [strokeWidth]="3"
-          [diameter]="25"
-          [showLoader]="showLoader"
-        ></app-loader>
-      </button>
+      <div class="row justify-content-between resp-style">
+        <div class="col-md-6">
+          <button
+            class="button-s"
+            mat-button
+            type="button"
+            (click)="dfaApplicationMainStepper.previous()"
+          >
+            Go Back & Edit
+          </button>
+        </div>
+        <div class="col-md-6">
+          <button
+            class="button-p"
+            mat-stroked-button
+            type="button"
+            (click)="dfaApplicationMainStepper.next()"
+          >
+            Next - Sign & Submit
+            <app-loader
+              [strokeWidth]="3"
+              [diameter]="25"
+              [showLoader]="showLoader"
+            ></app-loader>
+          </button>
+        </div>
+      </div>
+    </mat-step>
+    <mat-step *ngIf="currentFlow === 'verified-registration'">
+      <ng-template matStepLabel>Sign & Submit</ng-template>
+      <app-component-wrapper
+        componentName="sign-and-submit"
+        [folderPath]="dfaApplicationMainFolderPath"
+      ></app-component-wrapper>
+      <br />
+      <div class="row justify-content-between resp-style">
+        <div class="col-md-6">
+          <button
+            class="button-s"
+            mat-button
+            type="button"
+            (click)="dfaApplicationMainStepper.previous()"
+          >
+            Go Back & Edit
+          </button>
+        </div>
+        <div class="col-md-6">
+          <button
+            class="button-p save-button"
+            [disabled]="isSubmitted || !isSignaturesValid"
+            mat-stroked-button
+            type="button"
+            (click)="submitFile()"
+          >
+            Submit
+          </button>
+        </div>
+      </div>
     </mat-step>
     <ng-template matStepperIcon="edit" let-index="index">
       {{ index + 1 }}
