--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -9,7 +9,7 @@
         <div class="row">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
-              Select the cause(s) of damage.<span style="color:red" >*</span>
+              Select the cause(s) of damage.<span style="color:red" >*</span>{{propertyDamageForm.valid}}<button type="button" (click)="showForm()">Show Form</button>
             </p>
             <mat-checkbox
               formControlName="floodDamage"
@@ -20,6 +20,11 @@
               formControlName="landslideDamage"
               >
               Landslide Damage
+            </mat-checkbox><br/>
+            <mat-checkbox
+              formControlName="wildfireDamage"
+              >
+              Wildfire Damage
             </mat-checkbox><br/>
             <mat-checkbox
               formControlName="stormDamage"
@@ -35,7 +40,7 @@
             <mat-form-field appearance="outline" [hidden]="propertyDamageForm.get('otherDamage').value !== true" class="col-md-4">
               <mat-label>Cause of Damage</mat-label>
               <input matInput
-                required
+                [required]="propertyDamageForm.get('otherDamage').value === true"
                 type="text"
                 formControlName="otherDamageText"
                 placeholder="Cause of damage*"
@@ -49,6 +54,9 @@
                 Text is required</mat-error
               >
             </mat-form-field>
+            <mat-error *ngIf="propertyDamageForm.hasError('noCauseOfDamage')">
+              <br/>At least one cause of damage is required.
+            </mat-error>
           </div>
         </div><br/><br/>
 
@@ -67,6 +75,14 @@
               <mat-hint>MM/DD/YYYY</mat-hint>
               <mat-datepicker-toggle matSuffix [for]="fromPicker"></mat-datepicker-toggle>
               <mat-datepicker #fromPicker></mat-datepicker>
+              <mat-error
+                *ngIf="
+                propertyDamageForm.get('damageFromDate').invalid &&
+                propertyDamageForm.get('damageFromDate').hasError('required')
+              "
+              >
+                From date is required</mat-error
+              >
             </mat-form-field>
           </div>
           <div class="col-md-4">
@@ -80,6 +96,14 @@
               <mat-hint>MM/DD/YYYY</mat-hint>
               <mat-datepicker-toggle matSuffix [for]="toPicker"></mat-datepicker-toggle>
               <mat-datepicker #toPicker></mat-datepicker>
+              <mat-error
+                *ngIf="
+                propertyDamageForm.get('damageToDate').invalid &&
+                propertyDamageForm.get('damageToDate').hasError('required')
+              "
+              >
+                To date is required</mat-error
+              >
             </mat-form-field>
           </div>
         </div><br/><br/>
