--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -9,7 +9,7 @@
         <div class="row">
           <div class="col-md-12 bottomspace">
             <p class="sub-heading" style="font-size: 15px">
-              Select the cause(s) of damage.<span style="color:red" >*</span>{{propertyDamageForm.valid}}<button type="button" (click)="showForm()">Show Form</button>
+              Select the cause(s) of damage.<span style="color:red" >*</span>
             </p>
             <mat-checkbox
               formControlName="floodDamage"
