EMBCDFA-659, EMBCDFA-553 partial commit

--- a/dfa/src/UI/embc-dfa/src/app/feature-components/nextstepsprofile/nextstepsprofile.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/feature-components/nextstepsprofile/nextstepsprofile.component.html
@@ -23,6 +23,7 @@
           <button
             class="button-p notice-button"
             mat-button
+            (click)="navigateToDashboard()"
           >
             No, I am not ready to apply
           </button>
